ex03 done and ex04 work in progress

--- a/01_Module/ex04/Makefile
+++ b/01_Module/ex04/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: sbenes <sbenes@student.42prague.com>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/08/10 14:30:51 by sbenes            #+#    #+#              #
-#    Updated: 2023/08/11 11:05:31 by sbenes           ###   ########.fr        #
+#    Created: 2023/08/11 14:46:54 by sbenes            #+#    #+#              #
+#    Updated: 2023/08/11 16:47:14 by sbenes           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,14 +17,14 @@ RED =	\033[31m
 NC =	\033[0m
 
 #name
-NAME =		references
+NAME =		replacer
 
 #compilation
 CC =		c++
 CFLAGS = 	-Wall -Wextra -Werror -std=c++98
 
 #source files
-SRC = 		main.cpp
+SRC = 		main.cpp sb_split.cpp
 
 all: $(NAME)
 
@@ -32,7 +32,6 @@ $(NAME):
 	@echo "$(BOLD)$(GREEN)[ Compiling ... ]$(NC)"
 	@$(CC) $(CFLAGS) $(SRC) -o $(NAME)
 	@echo "$(BOLD)$(GREEN)[ 🪄 Program ready! ]$(NC)"
-	@./$(NAME)
 
 clean:
 	@echo "$(BOLD)$(RED)[ 🔥 Removing program ]$(NC)"
