ex00 almost done

--- a/06_Module/ex00/Makefile
+++ b/06_Module/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: sbenes <sbenes@student.42prague.com>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/04 09:20:07 by sbenes            #+#    #+#              #
-#    Updated: 2023/09/08 16:24:25 by sbenes           ###   ########.fr        #
+#    Updated: 2023/09/10 11:42:48 by sbenes           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,7 +31,8 @@ $(NAME):
 	@echo "$(BOLD)$(GREEN)[ Compiling ... ]$(NC)"
 	@$(CC) $(CFLAGS) $(SRC) -o $(NAME)
 	@echo "$(BOLD)$(GREEN)[ 🪄 Program ready! ]$(NC)"
-	@echo "\nusage: ./converter <value>\n"
+	@echo "\nusage: ./converter <value>"
+	@echo "optional arguments: -checker (prints the debug part with datatype)\n"
 
 
 clean:
