ex01 done, ex00 done - test pending

--- a/09_Module/ex01/Makefile
+++ b/09_Module/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: sbenes <sbenes@student.42prague.com>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/04 09:20:07 by sbenes            #+#    #+#              #
-#    Updated: 2023/09/25 15:08:06 by sbenes           ###   ########.fr        #
+#    Updated: 2023/09/25 16:22:46 by sbenes           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,14 +17,14 @@ RED =	\033[31m
 NC =	\033[0m
 
 #name
-NAME =		btc
+NAME =		RPN
 
 #compilation
 CC =		c++
 CFLAGS = 	-Wall -Wextra -Werror -std=c++98
 
 #source files
-SRC = 		BitcoinExchange.cpp main.cpp 
+SRC = 		RPN.cpp main.cpp 
 all: $(NAME)
 
 $(NAME): 
@@ -32,7 +32,8 @@ $(NAME):
 	@$(CC) $(CFLAGS) $(SRC) -o $(NAME)
 	@echo "$(BOLD)$(GREEN)[ 🪄 Program ready! ]$(NC)"
 	@echo "\n$(BOLD)$(GREEN)[ 📖 Usage ]$(NC)"
-	@echo "./btc <filepath>\n"
+	@echo "./RPN <reverse polish notation expression>"
+	@echo "./RPN eval - subject & evalsheet tests mode\n"
 
 
 clean:
